# Audiobook-Player

./: AudiobookPlayer_en.ts  CMakeLists.txt  YEU_CAU.md  app_icon.rc  build_release.bat  readme.md
src/: AudioEngine.cpp  AudioEngine.h  BookModel.cpp  BookModel.h  ButtonDelegate.cpp  ButtonDelegate.h  ChapterModel.cpp  ChapterModel.h  CustomToolTip.cpp  CustomToolTip.h  DataModels.h  DatabaseManager.cpp  DatabaseManager.h  LibraryWidget.cpp  LibraryWidget.h  MainWindow.cpp  MainWindow.h  MarqueeDelegate.cpp  MarqueeDelegate.h  MarqueeLabel.cpp  MarqueeLabel.h  PlayerWidget.cpp  PlayerWidget.h  SettingsDialog.cpp  SettingsDialog.h  SleepTimerDialog.cpp  SleepTimerDialog.h  SpeedControlPopup.cpp  SpeedControlPopup.h  TimeInputDialog.cpp  TimeInputDialog.h  main.cpp  resources.qrc
src/styles/: dark.qss  light.qss
src/translations/: lang_en.ts
